--- a/multifit.conf
+++ b/multifit.conf
@@ -1,23 +1,54 @@
-#--------------------------------------------------------------------------------------------------------------------------------------------------------
-# data file path /   magnitude type (ph/rv/fwhm/contrast/bis) /  select (0/1)  / wv_min; wv_max / filter_path (if appl.)  /  photom. zero  / jitter                
-#--------------------------------------------------------------------------------------------------------------------------------------------------------
+#-----------------------------------------------------------------------------------------------------------------------------------------------
+# data file path /   observable type (ph/rv/fwhm/contrast/bis) /  select (0/1)  / wv_min; wv_max / filter_path (if appl.) / jitter  / ph. zero              
+#-----------------------------------------------------------------------------------------------------------------------------------------------
 #
 #HD25825
-./science/lc_HD25825.dat                               ph            0           450.0  900.0   ./filters/kepler.dat             1.025      0.001
-./science/HD25825.mean                                 rv            0           380.0  690.0           x                          x        0.0
-./science/HD25825_ALL.dat                              rv            0           380.0  690.0           x                          x
-./science/HD25825_HARPS.mean                           rv            0           380.0  690.0           x                          x        0.0
-./science/HD25825_SOPHIE.mean                          rv            0           380.0  690.0           x                          x
+./science/hyades/K2_ph/HD25825/lc_HD25825.dat           ph            0       450.0  900.0   ./filters/kepler.dat        0.0015
+./science/hyades/K2_rv/HD25825.mean                     rv            0       380.0  690.0           x                   14.0
+./science/hyades/K2_rv/HD25825_ALL.dat                  rv            0       380.0  690.0           x                    
+./science/hyades/K2_rv/HD25825_HARPS.mean               rv            0       380.0  690.0           x                   6.0
+./science/hyades/K2_rv/HD25825_SOPHIE.mean              rv            0       380.0  690.0           x                   10.0
+./science/hyades/K2_rv/HD25825_TRES.mean                rv            0       380.0  690.0           x                   10.0
+./science/hyades/K2_rv/HD25825_BIS.mean                 bis           0       380.0  690.0           x                   0.006
+./science/hyades/K2_rv/HD25825_FWHM.mean                fwhm          0       380.0  690.0           x                       
+./science/hyades/K2_rv/HD25825_CONTRAST.mean            contrast      0       380.0  690.0           x                     
+#HD26756------------------------------------------------------------------------------------------------------------------------------
+./science/hyades/K2_ph/HD26756/lc_HD26756.dat           ph            0       450.0  900.0   ./filters/kepler.dat         
+./science/hyades/K2_rv/HD26756.mean                     rv            0       380.0  690.0           x                       
+./science/hyades/K2_rv/HD26756_HARPS.mean               rv            0       380.0  690.0           x                         
+#HD27989------------------------------------------------------------------------------------------------------------------------------
+./science/hyades/K2_ph/HD27989/lc_HD27989.dat           ph            0       450.0  900.0   ./filters/kepler.dat             
+./science/hyades/K2_rv/HD27989.mean                     rv            0       380.0  690.0           x                          
+./science/hyades/K2_rv/HD27989_HARPS.mean               rv            0       380.0  690.0           x                          
+#V1310--------------------------------------------------------------------------------------------------------------------------------
+./science/hyades/K2_rv/V1310Tau.mean                    rv            0       380.0  690.0           x                          
+./science/hyades/K2_rv/V1310Tau_HARPS.mean              rv            0       380.0  690.0           x                          
+./science/hyades/K2_ph/V1310Tau/lc_V1310_reduced.dat    ph            0       450.0  900.0   ./filters/kepler.dat             
+#GJ1214-------------------------------------------------------------------------------------------------------------------------------
+./science/GJ1214/GJ1214_V_all.dat.flux                  ph            0       460.0  680.0   ./filters/johnsonV.dat      0.0026
+./science/GJ1214/GJ1214_B_all.dat.flux                  ph            0       360.0  560.0   ./filters/johnsonB.dat      0.0025
+./science/GJ1214/GJ1214_I.dat.flux                      ph            0       680.0  1200.0  ./filters/johnsonI.dat      0.0025
+#-------------------------------------------------------------------------------------------------------------------------------------
+./science/hyades/K2_ph/HD25825/lc_HD25825_reduced.dat   ph            0       450.0  900.0   ./filters/kepler.dat        0.0015
+./science/hyades/K2_ph/HD26756/lc_HD26756_reduced.dat   ph            0       450.0  900.0   ./filters/kepler.dat             
+./science/hyades/K2_ph/HD27989/lc_HD27989_reduced.dat   ph            0       450.0  900.0   ./filters/kepler.dat             
+./science/hyades/K2_ph/V1310Tau/lc_V1310_reduced.dat    ph            0       450.0  900.0   ./filters/kepler.dat             
+#WASP-52--------------------------------------------------------------------------------------------------------------------------------
+./science/Wasp52/VAMOS_W52_B_naver_1617.navg            ph            0       360.0  560.0   ./filters/johnsonB.dat      0.00018
+./science/Wasp52/VAMOS_W52_V_naver_1617.navg            ph            0       460.0  680.0   ./filters/johnsonV.dat      0.00018
+./science/Wasp52/VAMOS_W52_I_naver_2017.navg            ph            0       680.0  1200.0  ./filters/johnsonI.dat      0.00018  
+./science/Wasp52/WASP-52_TJO_B_binned.navg              ph            0       360.0  560.0   ./filters/johnsonB.dat      0.00018
+./science/Wasp52/WASP-52_TJO_R_binned.navg              ph            0       540.0  900.0   ./filters/johnsonR.dat      0.00018      
+#TOY-MODEL (50-100ppm) -----------------------------------------------------------------------------------------------------------------
+./output/toy_model/U.noised                             ph            0       300.0  420.0   ./filters/johnsonU.dat      0.000    1.0
+./output/toy_model/B.noised                             ph            0       360.0  560.0   ./filters/johnsonB.dat      0.000    1.0
+./output/toy_model/V.noised                             ph            0       460.0  680.0   ./filters/johnsonV.dat      0.000    1.0
+./output/toy_model/R.noised                             ph            0       540.0  900.0   ./filters/johnsonR.dat      0.000    1.0
+./output/toy_model/I.noised                             ph            0       680.0  1200.0  ./filters/johnsonI.dat      0.000    1.0
+./output/toy_model/J.noised                             ph            0       960.0  1960.0  ./filters/johnsonJ.dat      0.000    1.0
+#---------------------------------------------------------------------------------------------------------------------------------------
 
-#--------------------------------------------------------------------------------------------------------------------------------------------------------
-./output/toy_model/lc_toy.dat                           ph            0           450.0  900.0   ./filters/kepler.dat              1.0
-./output/toy_model/lc_toy_hr.dat.noisy                  ph            0           450.0  900.0   ./filters/kepler.dat              1.0
-./output/toy_model/rv_toy.dat                           rv            0           380.0  690.0            x
-#--------------------------------------------------------------------------------------------------------------------------------------------------------
-./output/toy_model_2/lc_lr.dat.noisy                    ph            0           450.0  900.0   ./filters/kepler.dat              1.0
-./output/toy_model_2/lc_hr.dat.noisy                    ph            0           450.0  900.0   ./filters/kepler.dat              1.0
-./output/toy_model_2/rv_lr.dat.noisy                    rv            0           380.0  690.0            x                         x
-#--------------------------------------------------------------------------------------------------------------------------------------------------------
-./output/toy_model_3/lc_lr.dat.noisy                    ph            0           450.0  900.0   ./filters/kepler.dat              1.0
-./output/toy_model_3/rv_lr.dat.noisy                    rv            0           380.0  690.0            x                         x 
-#--------------------------------------------------------------------------------------------------------------------------------------------------------
+
+
+
+
