--- a/starsim.conf
+++ b/starsim.conf
@@ -1,9 +1,9 @@
 [files]
 
 filter_path : ./filters/johnsonV.dat                      ; Filter file path
-bt_settl_path_lres :  ../Mac_HD/albert/BT_Settl_lowres    ; BT-Settl spectra path
-bt_settl_path_hres : ../Mac_HD/albert/BT_Settl_Ariel      ; BT-Settl spectra path
-phoenix_path :        ../Mac_HD/albert/Phoenix_HR
+bt_settl_path_lres :  ./BT_Settl_lowres.                  ; BT-Settl spectra path
+bt_settl_path_hres : ./BT_Settl_Ariel                     ; BT-Settl spectra path
+phoenix_path :        ./Phoenix_HR
 precomp_spectra: .                                        ; Precompiled spectra path
 output_path : ./output/                                   ; Output files path
 output_path_rv : ./output/                                ; Output RV files 
