--- a/starsim.conf
+++ b/starsim.conf
@@ -1,7 +1,7 @@
 [files]
 
 filter_path : ./filters/johnsonV.dat                      ; Filter file path
-bt_settl_path_lres :  ./BT_Settl_lowres.                  ; BT-Settl spectra path
+bt_settl_path_lres :  ./BT_Settl_lowres                   ; BT-Settl spectra path
 bt_settl_path_hres : ./BT_Settl_Ariel                     ; BT-Settl spectra path
 phoenix_path :        ./Phoenix_HR
 precomp_spectra: .                                        ; Precompiled spectra path
@@ -26,7 +26,7 @@ spectral_mask :  IR                 ; G2/K5/M2 (HARPS) //  IR (wide VIS-NIR)
 
 [star]
 
-t_eff_ph : 3900.0                  ; Teff of the star photosphere (K)
+t_eff_ph : 5000.0                  ; Teff of the star photosphere (K)
 spot_T_contrast : 600.0            ; Spot temperature contrast (K)
 faculae_T_contrast : 50.0          ; Faculae temperature contrast (K)
 p_rot : 17.0                       ; Rotation period (days)
